k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: solar-app
spec:
  selector:
    app: solar-backend
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: solar-app
spec:
  selector:
    app: solar-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: solar-app
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
